# pytest-mcp

./: CONTRIBUTING.md  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
src/pytest_mcp/: plugin.py
