[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-test-framework"
version = "0.1.0"
description = "A pytest plugin for testing MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "pytest-mcp contributors" },
]
keywords = ["pytest", "mcp", "testing", "model-context-protocol", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pytest>=7.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.11.0",
    "hatchling>=1.18.0",
]

[project.urls]
Homepage = "https://github.com/aryanjp1/pytest-mcp"
Documentation = "https://github.com/aryanjp1/pytest-mcp#readme"
Repository = "https://github.com/aryanjp1/pytest-mcp"
Issues = "https://github.com/aryanjp1/pytest-mcp/issues"

[project.entry-points.pytest11]
pytest_mcp = "pytest_mcp.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
